logs/displaynode.log
Listing '.'...
Listing './DisplayNode'...
Listing './DisplayNode/static'...
Listing './DisplayNode/static/openseadragon'...
Listing './DisplayNode/static/openseadragon/images'...
Listing './DisplayNode/static/tipix'...
Listing './DisplayNode/static/tipix/images'...
Listing './DisplayNode/static/tipix/js'...
Listing './DisplayNode/static/tipix/style'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/DisplayNode'...
Compiling './lib/python3.5/site-packages/DisplayNode/DisplayNodeProxy.py'...
***   File "./lib/python3.5/site-packages/DisplayNode/DisplayNodeProxy.py", line 80
    print 'Shutting down DisplayNode server. '
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/DisplayNode/DisplayNodeServer.py'...
***   File "./lib/python3.5/site-packages/DisplayNode/DisplayNodeServer.py", line 138
    print "Frontend interrupted (Control-C)"
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/DisplayNode/examples'...
Compiling './lib/python3.5/site-packages/DisplayNode/examples/examples.py'...
***   File "./lib/python3.5/site-packages/DisplayNode/examples/examples.py", line 63
    print "Wait, generating awesome images .. "
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/DisplayNode/tests'...
Listing './lib/python3.5/site-packages/DisplayNode-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
